# local-market-analyzer

./: .gitignore  LICENSE  Makefile  README.md  config.py  main.py  requirements.txt
.github/: copilot-instructions.md
backend/: .env.example  README.md  pyproject.toml
backend/app/api/: app.py  deps.py  schemas.py
backend/app/api/routes/: analysis.py  config.py  health.py  market.py
backend/app/core/: config.py  interfaces.py  models.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/graph/: __init__.py  state.py  workflow.py
backend/app/graph/nodes/: __init__.py  compute_features.py  generate_signal.py  llm_interpret.py
backend/app/llm/: factory.py  llamacpp.py  openai_compat.py
backend/app/services/: market.py  prompt_loader.py  scheduler.py  signals.py
backend/config/: README.md  prompts.example.yaml  settings.example.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  data.ts  hooks.ts  index.css  types.ts
frontend/src/components/: ConfigPanel.tsx  Header.tsx  PriceChart.tsx  SignalFeed.tsx  StockPanel.tsx  Watchlist.tsx
